--- a/.github/workflows/docker-image-build-push-ecr.yml
+++ b/.github/workflows/docker-image-build-push-ecr.yml
@@ -24,7 +24,7 @@ jobs:
     - name: Login to Amazon ECR
       id: login-ecr
       uses: aws-actions/amazon-ecr-login@v2
-    - name: Build, tag, and push image to Amazon ECR
+    - name: Build, tag, and push image to Amazon ECR REPO
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         ECR_REPOSITORY: zon-coffee
